--- a/compose.yaml
+++ b/compose.yaml
@@ -21,8 +21,7 @@ services:
       - SPRING_DATASOURCE_PASSWORD=postgres
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
       - SPRING_JPA_SHOW_SQL=true
-      - SPRING_JPA_HIERNATE_DDL_AUTO=update
-
+      - SPRING_JPA_DATABSE_PLATFORM=org.hibernate.dialect.PostgreSQLDialect
     ports:
       - 8080:8080
   frontend:
